# ChemistryNotebook

./: .gitignore  .quartoignore  _quarto.yaml  build.sh  index.ipynb  styles.css
projects/periodic-table/: .gitignore  README.md  index.html  package-lock.json  package.json
projects/periodic-table-data/: README.md  pyproject.toml
projects/periodic-table-data/data/: elements.json
projects/periodic-table-data/src/periodic_table_data/: __init__.py  export.py  export_colormap.py  export_ts.py  models.py  name_zh.py
projects/periodic-table/src/: App.vue  style.css
projects/periodic-table/src/components/: ElementCell.vue  PeriodicTable.vue  TopControlGrid.vue
projects/periodic-table/src/data/: cellDisplay.ts  colorScale.ts  displaySettings.ts  elements.ts  layout.ts  propertyModes.ts  seriesDisplay.ts
中心科学/: 元素的周期性.ipynb  分子几何结构与成键理论.ipynb  化学动力学.ipynb  化学平衡.ipynb  化学键的基本概念.ipynb  原子的电子结构.ipynb  固体和现代材料.ipynb  基础知识.ipynb  学习链接.ipynb  气体.ipynb  测试.ipynb  液体和分子间力.ipynb  溶液的性质.ipynb  电子排布图.ipynb  第19章化学热力学.ipynb  第20章电化学.ipynb  第21章核化学.ipynb  第22章非金属化学.ipynb  第23章过渡金属与配位化学.ipynb  第24章有机化学与生物化学.ipynb  连续光谱图.ipynb  酸碱平衡.ipynb
中心科学/小结/: proto_基于查普曼循环的大气臭氧浓度垂直分布建模.md  script_md_to_ipynb.py  script_酸碱滴定实验.py  卢瑟福模型与电子坠落.ipynb  基于查普曼循环的大气臭氧浓度垂直分布建模.ipynb  汤姆逊荷质比实验.ipynb  热化学方程式.ipynb  玻尔兹曼分布.ipynb  玻尔模型.ipynb  电负性.ipynb  酸碱滴定实验.ipynb  麦克斯韦-玻尔兹曼分布.ipynb
中心科学/小结/基于查普曼循环的大气臭氧浓度垂直分布建模/: photoRateConstants_00km.csv  photoRateConstants_10km.csv  photoRateConstants_20km.csv  photoRateConstants_30km.csv  photoRateConstants_40km.csv  photoRateConstants_50km.csv
(+7 files in other folders)
